--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
