--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
