--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
     "mongoose": "^7.1.0",
